--- a/index.html
+++ b/index.html
@@ -67,7 +67,34 @@
             </article>
             <img class="img-intro" src="./img/amistad_v2.svg" alt="Imagen del header" />
         </section>
+        <section class="section-secondary">
+            <article class="video-container-home">
+                <div class="wrapper-video-section">
+                    <h1 class="title2">¿Quieres ver la inaguración en directo?</h1>
+                    <p class="text">
+                        La ceremonia de inaguración será retransmitida  directo  el lunes 27 de marzo a las 16:00
+                    </p>
+                </div>
 
+                <div class="wrapper-video-section">
+                    <iframe class="video-skills" src="https://www.youtube-nocookie.com/embed/ywHGAwt3jYQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </div>
+            </article>
+        </section>        
+        <section class="section-secondary">
+            <article class="video-container-home">
+                <div class="wrapper-video-section">
+                    <h1 class="title2">¿Quierres ver la entrega de medallas en directo?</h1>
+                    <p class="text">
+                        La ceremonia de entregaga de medalla/clausura será retransmitida  directo el viernes 27 de marzo a las 11:00
+                    </p>
+                </div>
+
+                <div class="wrapper-video-section">
+                    <iframe class="video-skills" src="https://www.youtube-nocookie.com/embed/nN8H7nUtMXk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </div>
+            </article>
+        </section>        
         <section class="section-secondary">
             <article class="intro-skills">
                 <div class="wrapper-image-section-right">
