--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         <section class="section-secondary">
             <article class="video-container-home">
                 <div class="wrapper-video-section">
-                    <h1 class="title2">¿Quierres ver la entrega de medallas en directo?</h1>
+                    <h1 class="title2">¿Quieres ver la entrega de medallas en directo?</h1>
                     <p class="text">
                         La ceremonia de entregaga de medalla/clausura será retransmitida  directo el viernes 27 de marzo a las 11:00
                     </p>
