--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@
         <section class="section-secondary">
             <article class="video-container-home">
                 <div class="wrapper-video-section">
-                    <h1 class="title2">¿Quieres ver la inaguración en directo?</h1>
+                    <h1 class="title2">¿Quieres ver la inauguración en directo?</h1>
                     <p class="text">
-                        La ceremonia de inaguración será retransmitida  directo  el lunes 27 de marzo a las 16:00
+                        La ceremonia de inauguración será retransmitida en directo el lunes 27 de marzo a las 16:00
                     </p>
                 </div>
 
@@ -86,7 +86,7 @@
                 <div class="wrapper-video-section">
                     <h1 class="title2">¿Quieres ver la entrega de medallas en directo?</h1>
                     <p class="text">
-                        La ceremonia de entregaga de medalla/clausura será retransmitida  directo el viernes 27 de marzo a las 11:00
+                        La ceremonia de entrega de medalla/clausura será retransmitida  directo el viernes 27 de marzo a las 11:00
                     </p>
                 </div>
 
@@ -95,7 +95,7 @@
                 </div>
             </article>
         </section>        
-        <section class="section-secondary">
+        <section class="section-terciary">
             <article class="intro-skills">
                 <div class="wrapper-image-section-right">
                     <h1 class="title2">¿Qué son las Skills?</h1>
