--- a/index_vlc.html
+++ b/index_vlc.html
@@ -67,7 +67,34 @@
             </article>
             <img class="img-intro" src="./img/amistad_v2.svg" alt="Imagen del header" />
         </section>
+        <section class="section-secondary">
+            <article class="video-container-home">
+                <div class="wrapper-video-section">
+                    <h1 class="title2">Vols veure la inauguració en directe?</h1>
+                    <p class="text">
+                        La cerimònia d'inauguració serà retransmesa en directe el dilluns 27 de març a les 16.00
+                    </p>
+                </div>
 
+                <div class="wrapper-video-section">
+                    <iframe class="video-skills" src="https://www.youtube-nocookie.com/embed/ywHGAwt3jYQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </div>
+            </article>
+        </section>        
+        <section class="section-terciary">
+            <article class="video-container-home">
+                <div class="wrapper-video-section">
+                    <h1 class="title2">Vols veure el lliurament de medalles en directe?</h1>
+                    <p class="text">
+                        La cerimònia de lliurament de medalla/clausura serà retransmesa directe el divendres 27 de març a les 11.00
+                    </p>
+                </div>
+
+                <div class="wrapper-video-section">
+                    <iframe class="video-skills" src="https://www.youtube-nocookie.com/embed/nN8H7nUtMXk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </div>
+            </article>
+        </section> 
         <section class="section-secondary">
             <article class="intro-skills">
                 <div class="wrapper-image-section-right">
