--- a/index_vlc.html
+++ b/index_vlc.html
@@ -84,7 +84,7 @@
         <section class="section-terciary">
             <article class="video-container-home">
                 <div class="wrapper-video-section">
-                    <h1 class="title2">Vols veure el lliurament de medalles en directe?</h1>
+                    <h1 class="title">Vols veure el lliurament de medalles en directe?</h1>
                     <p class="text">
                         La cerimònia de lliurament de medalla/clausura serà retransmesa directe el divendres 27 de març a les 11.00
                     </p>
