--- a/index.html
+++ b/index.html
@@ -64,10 +64,9 @@
                 </h1>
                 <p class="subtitle">Feria Valencia del 27 al 31 de Marzo 2023</p>
 
-                <p>¿quieres ver los resultados de las distintas competiciones de los CV Skills? Accede al <a href="https://ceice.gva.es/documents/161863064/370047390/PUBLICACION+MEDALLERO.pdf/e857d09c-dcd0-ef48-9773-668182745664?t=1680691308265">medallero</a></p>
+                <p class="text">¿Quieres ver los resultados de las distintas competiciones de los CV Skills? Accede al <a href="https://ceice.gva.es/documents/161863064/370047390/PUBLICACION+MEDALLERO.pdf/e857d09c-dcd0-ef48-9773-668182745664?t=1680691308265">medallero</a></p>
 
 
-                <a class="primary-link" href="https://forms.office.com/r/xp7mApNVww">Apúntate</a>
             </article>
             <img class="img-intro" src="./img/amistad_v2.svg" alt="Imagen del header" />
         </section>
