--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <meta name="description" content="Web de CV Skills." />
     <link rel="icon" type="image/jpg" href="./img/logoSkills.png" />
     <link rel="stylesheet" href="./css/styles.css" />
-
+    <link href="./assets/fontawesome-free-6.4.0-web/css/fontawesome.css" rel="stylesheet">
+    <link href="./assets/fontawesome-free-6.4.0-web/css/brands.css" rel="stylesheet">
+    <link href="./assets/fontawesome-free-6.4.0-web/css/solid.css" rel="stylesheet">
     <title>Skills Comunidad Valenciana</title>
 </head>
 
@@ -63,8 +65,10 @@
                     Tu experiencia en las <b>Skills</b> comienza ahora
                 </h1>
                 <p class="subtitle">Feria Valencia del 27 al 31 de Marzo 2023</p>
-
-                <p class="text">¿Quieres ver los resultados de las distintas competiciones de los CV Skills? Accede al <a href="https://ceice.gva.es/documents/161863064/370047390/PUBLICACION+MEDALLERO.pdf/e857d09c-dcd0-ef48-9773-668182745664?t=1680691308265">medallero</a></p>
+                <br><br><br>
+                <p class="text-profesional">¿Quieres ver los resultados de las distintas competiciones de los CV Skills?<p>
+                <br>
+                <p style="font-size: x-large;"><a style="color:var(--primary-color);text-decoration: none;" href="https://ceice.gva.es/documents/161863064/370047390/PUBLICACION+MEDALLERO.pdf/e857d09c-dcd0-ef48-9773-668182745664?t=1680691308265">Medallero&nbsp;<i  style="color:var(--primary-color)" class="fa-solid fa-medal"></i></a></p>
 
 
             </article>
