--- a/index_vlc.html
+++ b/index_vlc.html
@@ -7,6 +7,9 @@
     <meta name="description" content="Web de CV Skills." />
     <link rel="icon" type="image/jpg" href="./img/logoSkills.png" />
     <link rel="stylesheet" href="./css/styles.css" />
+    <link href="./assets/fontawesome-free-6.4.0-web/css/fontawesome.css" rel="stylesheet">
+    <link href="./assets/fontawesome-free-6.4.0-web/css/brands.css" rel="stylesheet">
+    <link href="./assets/fontawesome-free-6.4.0-web/css/solid.css" rel="stylesheet">
 
     <title>Skills Comunitat Valenciana</title>
 </head>
@@ -63,7 +66,12 @@
                     La teua experiència en les <b>Skills</b> comença ara
                 </h1>
                 <p class="subtitle">Fira valència del 27 al 31 de Març de 2023</p>
-                <a class="primary-link" href="https://forms.office.com/r/xp7mApNVww">Apunta't</a>
+                <br><br><br>
+                <p class="text-profesional">Vols veure els resultats de les diferents competicions dels CV Skills?<p>
+                <br>
+                <p style="font-size: x-large;"><a style="color:var(--primary-color);text-decoration: none;" href="https://ceice.gva.es/documents/161863064/370047390/PUBLICACION+MEDALLERO.pdf/e857d09c-dcd0-ef48-9773-668182745664?t=1680691308265">Medallero&nbsp;<i  style="color:var(--primary-color)" class="fa-solid fa-medal"></i></a></p>
+
+
             </article>
             <img class="img-intro" src="./img/amistad_v2.svg" alt="Imagen del header" />
         </section>
