--- a/index.html
+++ b/index.html
@@ -236,9 +236,6 @@
                                     <a class="item-menu" href="./especialidades/administracion_sistemas_red.html">TIC Administración de
                     Sistemas en Red</a>
                                 </li>
-                                <li>
-                                    <a class="item-menu" href="./especialidades/cloud_computing.html">Cloud computing</a>
-                                </li>
                             </ul>
                         </div>
                     </div>
@@ -280,6 +277,26 @@
                             </ul>
                         </div>
                     </div>
+
+                    <div class="card">
+                        <div class="skill-container">
+                            <img class="skill-img" src="./img/skill5.jpg" alt="" />
+                        </div>
+                        <div class="details">
+                            <h3>Demostración</h3>
+                            <ul class="lista-cursos">
+                                <li><a class="item-menu" style="cursor:default" href="javascript:void(0)">Emprendimiento/Administración</a></li>
+                                <li><a class="item-menu" href="./especialidades/cloud_computing.html">Cloud computing</a></li>
+                                <li><a class="item-menu" style="cursor:default" href="javascript:void(0)">Joyería</a></li>
+                                <li><a class="item-menu" style="cursor:default" href="javascript:void(0)">Diseño Gráfico</a></li>
+                                <li><a class="item-menu" style="cursor:default" href="javascript:void(0)">Laboratorio Químico</a></li>
+                                <li><a class="item-menu" style="cursor:default" href="javascript:void(0)">Edificación y Obra Civil</a></li>
+                                <li><a class="item-menu" style="cursor:default" href="javascript:void(0)">Gestión del Agua</a></li>                                                                                                                                                               
+                            </ul>
+                        </div>
+                    </div>
+
+
                 </div>
             </article>
         </section>
