--- a/index_vlc.html
+++ b/index_vlc.html
@@ -283,6 +283,25 @@
                             </ul>
                         </div>
                     </div>
+
+                    <div class="card">
+                        <div class="skill-container">
+                            <img class="skill-img" src="./img/skill5.jpg" alt="" />
+                        </div>
+                        <div class="details">
+                            <h3>Demostració</h3>
+                            <ul class="lista-cursos">
+                                <li><a class="item-menu" style="cursor:default" href="javascript:void(0)">Emprenedoria/Administració</a></li>
+                                <li><a class="item-menu" href="./especialidades/cloud_computing_vlc.html">Cloud computing</a></li>
+                                <li><a class="item-menu" style="cursor:default" href="javascript:void(0)">Joieria</a></li>
+                                <li><a class="item-menu" style="cursor:default" href="javascript:void(0)">Disseny Gràfic</a></li>
+                                <li><a class="item-menu" style="cursor:default" href="javascript:void(0)">Laboratori Químic</a></li>
+                                <li><a class="item-menu" style="cursor:default" href="javascript:void(0)">Edificació i Obra Civil</a></li>
+                                <li><a class="item-menu" style="cursor:default" href="javascript:void(0)">Gestió de l’Aigua</a></li>                                                                                                                                                               
+                            </ul>
+                        </div>
+                    </div>
+
                 </div>
             </article>
         </section>
